# tesh

./: .bash_history  .dockerignore  .editorconfig  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  flake-module.nix  flake.nix  interface.nix  pyproject.toml  readme.sh  shell.nix
.circleci/: config.yml
.github/actions/nix-shell/: action.yml
.github/actions/uncommitted-changes/: action.yml
.github/workflows/: ci.yml
demo/: happy.md  nix-shell.md  sad.md
dream2nix/: default.nix  x86_64-linux.json
examples/: nix-shell.md
nix/: poetry2nix-overrides.nix  tesh.nix
src/tesh/: __init__.py  changedir.py  extract.py  test.py
src/tesh/tests/: __init__.py  test_extract.py  test_hello.py  test_run.py  test_tesh.py
src/tesh/tests/fixtures/: debug.md  exitcodes.md  exitcodes_multipleblocks.md  fail.md  fixture.md  long_command.md  multiline_command.md  multiple_codeblocks.md  no_codeblocks.md  prompt.md  setup.md  setup.sh  setup_fail.md  timeout.md  whitespace.md  wildcards.md
src/tesh/tests/fixtures/folder/: contained.md  simple.md
