[tool.poetry]
name = "tesh"
version = "0.1.0"
description = "TEstable SHell sessions in Markdown"
authors = [
	"Domen Kozar",
  "Nejc Zupan",
]
license = "MIT"

[tool.poetry.scripts]
tesh = "tesh:hello"

[tool.poetry.dependencies]
python = "^3.9"

click = "*"
pexpect = "*"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "==22.6.0"  # remove pin after upgrading to nixpkgs-22.11
codespell = "==2.1.0"  # remove pin after upgrading to nixpkgs-22.11
coverage = "*"
docutils = "*"
flake8 = "*"
flake8-assertive = "*"
flake8-blind-except = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-deprecated = "*"
flake8-docstrings = "*"
flake8-ensure-ascii = "*"
flake8-mutable = "*"
flake8-plone-hasattr = "*"
flake8-print = "*"
flake8-self = "*"
flake8-super-call = "*"
flake8-tuple = "*"
isort = "*"
mccabe = "*"
mypy = "==0.971"  # remove dependency after upgrading to nixpkgs-22.11
pdbpp = "*"
pre-commit = "*"
pre-commit-hooks = "*"
pytest = "==7.1.2"  # remove pin after upgrading to nixpkgs-22.11
pytest-cov = "*"
pytest-instafail = "*"
pytest-randomly = "*"
pytest-socket = "*"
pyupgrade = "*"
typecov = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
