[tool.poetry]
name = "tesh"
version = "0.3.0"
description = "TEstable SHell sessions in Markdown"
readme = "README.md"
authors = [
	"Domen Kozar",
  "Nejc Zupan",
]
license = "MIT"
packages = [
  { include = "tesh", from = "src" },
]


[tool.poetry.scripts]
tesh = "tesh:tesh"


[tool.poetry.dependencies]
python = "^3.9"

click = "*"
pexpect = "*"


[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
codespell = "*"
coverage = "*"
docutils = "*"
flake8 = "*"
flake8-assertive = "*"
flake8-blind-except = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-deprecated = "*"
flake8-docstrings = "*"
flake8-ensure-ascii = "*"
flake8-plone-hasattr = "*"
flake8-print = "*"
flake8-self = "*"
flake8-super-call = "*"
flake8-tuple = "*"
isort = "*"
mccabe = "*"
mypy = "*"
pdbpp = "*"
pre-commit = "*"
pre-commit-hooks = "*"
pyfakefs = "*"
pytest = "*"
pytest-cov = "*"
pytest-instafail = "*"
pytest-randomly = "*"
pytest-socket = "*"
pyupgrade = "*"
typecov = "*"
yamllint = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.autoflake]
remove-all-unused-imports = true
in-place = true
recursive = true


[tool.isort]
atomic=true
force_alphabetical_sort=true
force_single_line=true
line_length=88


[tool.mypy]
follow_imports = "silent"
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
linecount_report = "./typecov"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "pexpect.*",
]

[tool.pytest.ini_options]
junit_duration_report = "call"
